tests/NormalTests/paczka1/fuzzy1/53089891.err
Error in line 7: fKcsRLAd5 A317 96,3
Error in line 11: Phyf S351 37,9
Error in line 13: fKcsRLAd5 S81 47,7
Error in line 18: Phyf S81 0,0
Error in line 29: A317 A317 174,1
Error in line 36: ae8LOD S81 15,5
